fix: refactoring of RID usage preferring lightweight form
(cherry picked from commit f4642cc1757ac67aac42fe6fa124cb9bac8bd480)